logs/pydeps.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pydeps'...
Compiling './lib/python3.5/site-packages/pydeps/colors.py'...
***   File "./lib/python3.5/site-packages/pydeps/colors.py", line 64
    def rgb2eightbit((r, g, b)):
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydeps/depgraph.py'...
***   File "./lib/python3.5/site-packages/pydeps/depgraph.py", line 43
    print "changing __main__ =>", self.name
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pydeps/mf27.py'...
***   File "./lib/python3.5/site-packages/pydeps/mf27.py", line 94
    print "   ",
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pydeps/py2depgraph.py'...
***   File "./lib/python3.5/site-packages/pydeps/py2depgraph.py", line 139
    def load_module(self, fqname, fp, pathname, (suffix, mode, kind)):
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydeps/pydeps.py'...
***   File "./lib/python3.5/site-packages/pydeps/pydeps.py", line 25
    print ' '.join(str(a) for a in args)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pydeps-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/stdlib_list'...
Listing './lib/python3.5/site-packages/stdlib_list/lists'...
Listing './lib/python3.5/site-packages/stdlib_list-0.4.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
